fix: use sass-stretched-link

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -13,6 +13,7 @@ $level-item-spacing: 1.5rem;
 
 @import "~bulma/sass/utilities/_all";
 @import "@dword-design/nuxt-buefy/dist/style";
+@import "~sass-stretched-link";
 
 $shadow-lg: 0 0.5em 2em -0.125em rgba($scheme-invert, 0.2),
   0 0 0 1px rgba($scheme-invert, 0.02);
@@ -36,16 +37,8 @@ body {
   align-items: center;
 }
 
-.stretched-link::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0);
-  pointer-events: auto;
+.stretched-link {
+  @include stretched-link;
 }
 
 .card {
